# engine

./: .env.example  CMakeLists.txt  COMPETENCIA.md  LICENSE  README.md  compile_protobuf.ps1  compile_protobuf.sh  config.ini  protobuf_compile.sh  save_lua.txt  steps.md
.github/workflows/: win-deploy.yml
cmake/: BuildLua.cmake  BuildProtobuf.cmake  CompileProtobuf.cmake
docs/: ARCHITECTURE.md
scripts/: capture_ball.lua  kick_to_point.lua  script.lua
scripts-test/: script.lua
scripts/sysmickit/: lua_api.lua
src/: CMakeLists.txt  main.cpp  process.cpp  process.hpp
src/assets/: icon.rc
src/consolereader/: CMakeLists.txt  consolereader.cpp  consolereader.hpp
src/gamecontroller/: CMakeLists.txt  gamecontroller.cpp  gamecontroller.hpp
src/grsim/: CMakeLists.txt  grsim.cpp
src/gui/: CMakeLists.txt  ballitem.cpp  ballitem.hpp  colors.hpp  mainwindow.cpp  mainwindow.hpp  robotcontrolpanel.cpp  robotcontrolpanel.hpp  robotitem.cpp  robotitem.hpp  scriptcontrolpanel.cpp  scriptcontrolpanel.hpp  targetmarker.cpp  targetmarker.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/luainterface/: CMakeLists.txt  capture_ball.lua  kick_to_point.lua  luabindings.cpp  luabindings.hpp  luainterface.cpp  luainterface.hpp  mark.lua  pass_to_robot.lua  receive_pass.lua  robot.lua  script.lua  utils.lua
src/luainterface/core/: move.lua
src/luainterface/plays/: play_test.lua  simple_cycle.lua  triple_pass.lua
src/luainterface/skills/: aim.lua  capture_ball.lua  dribble.lua  hold.lua  intercept.lua  kick_to_point.lua
src/luainterface/sysmickit/: lua_api.lua
src/luainterface/tactics/: attack.lua  defend.lua  pass_and_move.lua  receive_pass.lua
src/motion/: CMakeLists.txt  environment.cpp  environment.hpp  motion.cpp  motion.hpp  motioncommand.cpp  motioncommand.hpp  path_planner.cpp  path_planner.hpp
src/motion/bangbangcontrol/: CMakeLists.txt  bangbangcontrol.cpp  bangbangcontrol.hpp  trajectory1d.cpp  trajectory1d.hpp  trajectory2d.cpp  trajectory2d.hpp
src/motion/pi_vel/: CMakeLists.txt  pi_vel.cpp  pi_vel.hpp
src/motion/pid/: CMakeLists.txt  pid.cpp  pid.hpp
src/pathplanning/: CMakeLists.txt  pathplanning.cpp  pathplanning.hpp
src/protobuf/: CMakeLists.txt  grSim_Commands.pb.cc  grSim_Commands.pb.h  grSim_Packet.pb.cc  grSim_Packet.pb.h  grSim_Replacement.pb.cc  grSim_Replacement.pb.h  grSim_Robotstatus.pb.cc  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  ssl_game_controller_auto_ref.pb.cc  ssl_game_controller_auto_ref.pb.h  ssl_game_controller_common.pb.cc  ssl_game_controller_common.pb.h  ssl_game_controller_geometry.pb.cc  ssl_game_controller_geometry.pb.h  ssl_game_controller_team.pb.cc  ssl_game_controller_team.pb.h  ssl_game_event_2019.pb.cc  ssl_game_event_2019.pb.h  ssl_gc_api.pb.cc  ssl_gc_api.pb.h  ssl_gc_change.pb.cc  ssl_gc_change.pb.h  ssl_gc_common.pb.cc  ssl_gc_common.pb.h  ssl_gc_engine.pb.cc  ssl_gc_engine.pb.h  ssl_gc_engine_config.pb.cc  ssl_gc_engine_config.pb.h  ssl_gc_game_event.pb.cc  ssl_gc_game_event.pb.h  ssl_gc_geometry.pb.cc  ssl_gc_rcon.pb.cc  ssl_gc_rcon.pb.h  ssl_gc_rcon_autoref.pb.cc  (+31 more)
src/protobuf/protos/: ssl_gc_api.proto  ssl_gc_change.proto  ssl_gc_engine.proto  ssl_gc_game_event.proto  ssl_gc_rcon_autoref.proto  ssl_gc_rcon_team.proto  ssl_gc_referee_message.proto  ssl_gc_state.proto
src/protobuf/squemes/robocup_ssl/: messages_robocup_ssl_detection.proto
src/radio/: CMakeLists.txt  grsim.cpp  grsim.hpp  packetserializer.cpp  packetserializer.hpp  radio.cpp  radio.hpp  radioRx.cpp  radioRx.hpp
src/receivers/: CMakeLists.txt  game_controller_ref.cpp  game_controller_ref.hpp  game_controller_socket.hpp  game_controller_team.cpp  game_controller_team.hpp  game_state.cpp  game_state.hpp  tracker.cpp  tracker.hpp  vision.cpp  vision.hpp
src/receivers/Kalman/: KalmanFilter.cpp  KalmanFilter.hpp
src/receivers/kalman/: ekf.cpp  ekf.hpp  robotkalman.cpp  robotkalman.hpp  robotstatscollector.cpp  robotstatscollector.hpp
src/stp/: CMakeLists.txt  capture.cpp  capture.hpp  move.cpp  move.hpp  skill.cpp  skill.hpp
src/utilities/: CMakeLists.txt  ballstate.cpp  ballstate.hpp  kickercommand.cpp  kickercommand.hpp  motioncommand.cpp  motioncommand.hpp  robotcommand.cpp  robotcommand.hpp  robotstate.cpp  robotstate.hpp  statechecker.cpp  statechecker.hpp
src/websocketserver/: CMakeLists.txt  websocketserver.cpp  websocketserver.hpp
src/world/: CMakeLists.txt  world.cpp  world.hpp
tests/: CMakeLists.txt  robotstate_test.cpp  world_test.cpp
